--- a/doc/MathPhysicalConstants.ipynb
+++ b/doc/MathPhysicalConstants.ipynb
@@ -239,7 +239,7 @@
    "outputs": [],
    "source": [
     "using Pkg\n",
-    "Pkg.add(\"MathPhysicalConstants\")"
+    "Pkg.clone(\"https://github.com/laguer/PhysicalConstant.jl\")"
    ]
   },
   {
