--- a/doc/MathPhysicalConstants.ipynb
+++ b/doc/MathPhysicalConstants.ipynb
@@ -239,6 +239,7 @@
    "outputs": [],
    "source": [
     "using Pkg\n",
+    "Pkg.clone(\"https://github.com/laguer/MathPhysicalConstants.jl\")",
     "Pkg.clone(\"https://github.com/laguer/PhysicalConstant.jl\")"
    ]
   },
