--- a/doc/MathPhysicalConstants.ipynb
+++ b/doc/MathPhysicalConstants.ipynb
@@ -41,7 +41,7 @@
      "text": [
       "\u001b[32m\u001b[1m  Updating\u001b[22m\u001b[39m registry at `/srv/julia/pkg/registries/General`\n",
       "\u001b[32m\u001b[1m  Updating\u001b[22m\u001b[39m git-repo `https://github.com/JuliaRegistries/General.git`\n",
-      "\u001b[2K\u001b[?25h\u001b[32m\u001b[1m Resolving\u001b[22m\u001b[39m package versions...\n",
+      "\u001b[?25l\u001b[2K\u001b[?25h\u001b[32m\u001b[1m Resolving\u001b[22m\u001b[39m package versions...\n",
       "\u001b[32m\u001b[1m  Updating\u001b[22m\u001b[39m `/srv/julia/pkg/environments/v0.7/Project.toml`\n",
       " \u001b[90m [8f4d0f93]\u001b[39m\u001b[92m + Conda v1.3.0\u001b[39m\n",
       "\u001b[32m\u001b[1m  Updating\u001b[22m\u001b[39m `/srv/julia/pkg/environments/v0.7/Manifest.toml`\n",
@@ -119,9 +119,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "┌ Info: Running `conda install -y matplotlib` in root environment\n",
+      "└ @ Conda /srv/julia/pkg/packages/Conda/kLXeC/src/Conda.jl:112\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting package metadata (current_repodata.json): ...working... done\n",
+      "Solving environment: ...working... done\n",
+      "\n",
+      "## Package Plan ##\n",
+      "\n",
+      "  environment location: /srv/julia/pkg/conda/3\n",
+      "\n",
+      "  added / updated specs:\n",
+      "    - matplotlib\n",
+      "\n",
+      "\n",
+      "The following packages will be downloaded:\n",
+      "\n",
+      "    package                    |            build\n",
+      "    ---------------------------|-----------------\n",
+      "    cycler-0.10.0              |           py37_0          13 KB\n",
+      "    dbus-1.13.12               |       h746ee38_0         501 KB\n",
+      "    expat-2.2.6                |       he6710b0_0         146 KB\n",
+      "    fontconfig-2.13.0          |       h9420a91_0         227 KB\n",
+      "    freetype-2.9.1             |       h8a8886c_1         550 KB\n",
+      "    glib-2.63.1                |       h5a9c865_0         2.9 MB\n",
+      "    gst-plugins-base-1.14.0    |       hbbd80ab_1         4.8 MB\n",
+      "    gstreamer-1.14.0           |       hb453b48_1         3.1 MB\n",
+      "    icu-58.2                   |       h9c2bf20_1        10.3 MB\n",
+      "    jpeg-9b                    |       h024ee3a_2         214 KB\n",
+      "    kiwisolver-1.1.0           |   py37he6710b0_0          82 KB\n",
+      "    libpng-1.6.37              |       hbc83047_0         278 KB\n",
+      "    libuuid-1.0.3              |       h1bed415_2          15 KB\n",
+      "    libxcb-1.13                |       h1bed415_1         421 KB\n",
+      "    libxml2-2.9.9              |       hea5a465_1         1.6 MB\n",
+      "    matplotlib-3.1.1           |   py37h5429711_0         5.0 MB\n",
+      "    pcre-8.43                  |       he6710b0_0         209 KB\n",
+      "    pyparsing-2.4.6            |             py_0          64 KB\n",
+      "    pyqt-5.9.2                 |   py37h05f1152_2         4.5 MB\n",
+      "    python-dateutil-2.8.1      |             py_0         224 KB\n",
+      "    pytz-2019.3                |             py_0         231 KB\n",
+      "    qt-5.9.7                   |       h5867ecd_1        68.5 MB\n",
+      "    sip-4.19.8                 |   py37hf484d3e_0         274 KB\n",
+      "    tornado-6.0.3              |   py37h7b6447c_0         584 KB\n",
+      "    ------------------------------------------------------------\n",
+      "                                           Total:       104.5 MB\n",
+      "\n",
+      "The following NEW packages will be INSTALLED:\n",
+      "\n",
+      "  cycler             pkgs/main/linux-64::cycler-0.10.0-py37_0\n",
+      "  dbus               pkgs/main/linux-64::dbus-1.13.12-h746ee38_0\n",
+      "  expat              pkgs/main/linux-64::expat-2.2.6-he6710b0_0\n",
+      "  fontconfig         pkgs/main/linux-64::fontconfig-2.13.0-h9420a91_0\n",
+      "  freetype           pkgs/main/linux-64::freetype-2.9.1-h8a8886c_1\n",
+      "  glib               pkgs/main/linux-64::glib-2.63.1-h5a9c865_0\n",
+      "  gst-plugins-base   pkgs/main/linux-64::gst-plugins-base-1.14.0-hbbd80ab_1\n",
+      "  gstreamer          pkgs/main/linux-64::gstreamer-1.14.0-hb453b48_1\n",
+      "  icu                pkgs/main/linux-64::icu-58.2-h9c2bf20_1\n",
+      "  jpeg               pkgs/main/linux-64::jpeg-9b-h024ee3a_2\n",
+      "  kiwisolver         pkgs/main/linux-64::kiwisolver-1.1.0-py37he6710b0_0\n",
+      "  libpng             pkgs/main/linux-64::libpng-1.6.37-hbc83047_0\n",
+      "  libuuid            pkgs/main/linux-64::libuuid-1.0.3-h1bed415_2\n",
+      "  libxcb             pkgs/main/linux-64::libxcb-1.13-h1bed415_1\n",
+      "  libxml2            pkgs/main/linux-64::libxml2-2.9.9-hea5a465_1\n",
+      "  matplotlib         pkgs/main/linux-64::matplotlib-3.1.1-py37h5429711_0\n",
+      "  pcre               pkgs/main/linux-64::pcre-8.43-he6710b0_0\n",
+      "  pyparsing          pkgs/main/noarch::pyparsing-2.4.6-py_0\n",
+      "  pyqt               pkgs/main/linux-64::pyqt-5.9.2-py37h05f1152_2\n",
+      "  python-dateutil    pkgs/main/noarch::python-dateutil-2.8.1-py_0\n",
+      "  pytz               pkgs/main/noarch::pytz-2019.3-py_0\n",
+      "  qt                 pkgs/main/linux-64::qt-5.9.7-h5867ecd_1\n",
+      "  sip                pkgs/main/linux-64::sip-4.19.8-py37hf484d3e_0\n",
+      "  tornado            pkgs/main/linux-64::tornado-6.0.3-py37h7b6447c_0\n",
+      "\n",
+      "\n",
+      "\n",
+      "Downloading and Extracting Packages\n",
+      "freetype-2.9.1       | 550 KB    | ########## | 100% \n",
+      "fontconfig-2.13.0    | 227 KB    | ########## | 100% \n",
+      "dbus-1.13.12         | 501 KB    | ########## | 100% \n",
+      "libuuid-1.0.3        | 15 KB     | ########## | 100% \n",
+      "pytz-2019.3          | 231 KB    | ########## | 100% \n",
+      "pyparsing-2.4.6      | 64 KB     | ########## | 100% \n",
+      "python-dateutil-2.8. | 224 KB    | ########## | 100% \n",
+      "pcre-8.43            | 209 KB    | ########## | 100% \n",
+      "gstreamer-1.14.0     | 3.1 MB    | ########## | 100% \n",
+      "tornado-6.0.3        | 584 KB    | ########## | 100% \n",
+      "glib-2.63.1          | 2.9 MB    | ########## | 100% \n",
+      "icu-58.2             | 10.3 MB   | ########## | 100% \n",
+      "libpng-1.6.37        | 278 KB    | ########## | 100% \n",
+      "libxcb-1.13          | 421 KB    | ########## | 100% \n",
+      "jpeg-9b              | 214 KB    | ########## | 100% \n",
+      "matplotlib-3.1.1     | 5.0 MB    | ########## | 100% \n",
+      "qt-5.9.7             | 68.5 MB   | ########## | 100% \n",
+      "expat-2.2.6          | 146 KB    | ########## | 100% \n",
+      "cycler-0.10.0        | 13 KB     | ########## | 100% \n",
+      "libxml2-2.9.9        | 1.6 MB    | ########## | 100% \n",
+      "sip-4.19.8           | 274 KB    | ########## | 100% \n",
+      "pyqt-5.9.2           | 4.5 MB    | ########## | 100% \n",
+      "gst-plugins-base-1.1 | 4.8 MB    | ########## | 100% \n",
+      "kiwisolver-1.1.0     | 82 KB     | ########## | 100% \n",
+      "Preparing transaction: ...working... done\n",
+      "Verifying transaction: ...working... done\n",
+      "Executing transaction: ...working... done\n"
+     ]
+    }
+   ],
    "source": [
     "#Pkg.build(\"PyCall\")\n",
     "using Conda\n",
@@ -175,9 +289,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "┌ Info: Running `conda list` in root environment\n",
+      "└ @ Conda /srv/julia/pkg/packages/Conda/kLXeC/src/Conda.jl:112\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# packages in environment at /srv/julia/pkg/conda/3:\n",
+      "#\n",
+      "# Name                    Version                   Build  Channel\n",
+      "_libgcc_mutex             0.1                        main  \n",
+      "asn1crypto                1.2.0                    py37_0  \n",
+      "blas                      1.0                         mkl  \n",
+      "ca-certificates           2019.11.27                    0  \n",
+      "certifi                   2019.11.28               py37_0  \n",
+      "cffi                      1.13.2           py37h2e261b9_0  \n",
+      "chardet                   3.0.4                 py37_1003  \n",
+      "conda                     4.8.1                    py37_0  \n",
+      "conda-package-handling    1.6.0            py37h7b6447c_0  \n",
+      "cryptography              2.8              py37h1ba5d50_0  \n",
+      "cycler                    0.10.0                   py37_0  \n",
+      "dbus                      1.13.12              h746ee38_0  \n",
+      "expat                     2.2.6                he6710b0_0  \n",
+      "fontconfig                2.13.0               h9420a91_0  \n",
+      "freetype                  2.9.1                h8a8886c_1  \n",
+      "glib                      2.63.1               h5a9c865_0  \n",
+      "gst-plugins-base          1.14.0               hbbd80ab_1  \n",
+      "gstreamer                 1.14.0               hb453b48_1  \n",
+      "icu                       58.2                 h9c2bf20_1  \n",
+      "idna                      2.8                      py37_0  \n",
+      "intel-openmp              2019.4                      243  \n",
+      "jpeg                      9b                   h024ee3a_2  \n",
+      "kiwisolver                1.1.0            py37he6710b0_0  \n",
+      "libedit                   3.1.20181209         hc058e9b_0  \n",
+      "libffi                    3.2.1                hd88cf55_4  \n",
+      "libgcc-ng                 9.1.0                hdf63c60_0  \n",
+      "libgfortran-ng            7.3.0                hdf63c60_0  \n",
+      "libpng                    1.6.37               hbc83047_0  \n",
+      "libstdcxx-ng              9.1.0                hdf63c60_0  \n",
+      "libuuid                   1.0.3                h1bed415_2  \n",
+      "libxcb                    1.13                 h1bed415_1  \n",
+      "libxml2                   2.9.9                hea5a465_1  \n",
+      "matplotlib                3.1.1            py37h5429711_0  \n",
+      "mkl                       2019.4                      243  \n",
+      "mkl-service               2.3.0            py37he904b0f_0  \n",
+      "mkl_fft                   1.0.15           py37ha843d7b_0  \n",
+      "mkl_random                1.1.0            py37hd6b4f25_0  \n",
+      "ncurses                   6.1                  he6710b0_1  \n",
+      "numpy                     1.17.4           py37hc1035e2_0  \n",
+      "numpy-base                1.17.4           py37hde5b4d6_0  \n",
+      "openssl                   1.1.1d               h7b6447c_3  \n",
+      "pcre                      8.43                 he6710b0_0  \n",
+      "pip                       19.3.1                   py37_0  \n",
+      "pycosat                   0.6.3            py37h7b6447c_0  \n",
+      "pycparser                 2.19                     py37_0  \n",
+      "pyopenssl                 19.1.0                   py37_0  \n",
+      "pyparsing                 2.4.6                      py_0  \n",
+      "pyqt                      5.9.2            py37h05f1152_2  \n",
+      "pysocks                   1.7.1                    py37_0  \n",
+      "python                    3.7.4                h265db76_1  \n",
+      "python-dateutil           2.8.1                      py_0  \n",
+      "pytz                      2019.3                     py_0  \n",
+      "qt                        5.9.7                h5867ecd_1  \n",
+      "readline                  7.0                  h7b6447c_5  \n",
+      "requests                  2.22.0                   py37_1  \n",
+      "ruamel_yaml               0.15.87          py37h7b6447c_0  \n",
+      "setuptools                44.0.0                   py37_0  \n",
+      "sip                       4.19.8           py37hf484d3e_0  \n",
+      "six                       1.13.0                   py37_0  \n",
+      "sqlite                    3.30.1               h7b6447c_0  \n",
+      "tk                        8.6.8                hbc83047_0  \n",
+      "tornado                   6.0.3            py37h7b6447c_0  \n",
+      "tqdm                      4.40.2                     py_0  \n",
+      "urllib3                   1.25.7                   py37_0  \n",
+      "wheel                     0.33.6                   py37_0  \n",
+      "xz                        5.2.4                h14c3975_4  \n",
+      "yaml                      0.1.7                had09818_2  \n",
+      "zlib                      1.2.11               h7b6447c_3  \n"
+     ]
+    }
+   ],
    "source": [
     "import Conda\n",
     "Conda.list()"
@@ -192,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -204,9 +404,7 @@
       " \u001b[90m [8f4d0f93]\u001b[39m\u001b[37m Conda v1.3.0\u001b[39m\n",
       " \u001b[90m [e30172f5]\u001b[39m\u001b[37m Documenter v0.22.6\u001b[39m\n",
       " \u001b[90m [7073ff75]\u001b[39m\u001b[37m IJulia v1.20.2\u001b[39m\n",
-      " \u001b[90m [b5851bab]\u001b[39m\u001b[37m MathPhysicalConstants v0.0.5+ [`/srv/julia/pkg/dev/MathPhysicalConstants`]\u001b[39m\n",
       " \u001b[90m [eff96d63]\u001b[39m\u001b[37m Measurements v1.0.2\u001b[39m\n",
-      " \u001b[90m [988cf3cc]\u001b[39m\u001b[37m PhysicalConstant v0.0.3 [`/srv/julia/pkg/dev/PhysicalConstant`]\u001b[39m\n",
       " \u001b[90m [438e738f]\u001b[39m\u001b[37m PyCall v1.91.2\u001b[39m\n",
       " \u001b[90m [1fd47b50]\u001b[39m\u001b[37m QuadGK v2.3.1\u001b[39m\n",
       " \u001b[90m [3cdcf5f2]\u001b[39m\u001b[37m RecipesBase v0.5.0\u001b[39m\n",
@@ -253,17 +451,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m\u001b[1m   Cloning\u001b[22m\u001b[39m git-repo `https://github.com/laguer/MathPhysicalConstants.jl`\n",
-      "\u001b[?25l    "
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -276,6 +466,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\u001b[32m\u001b[1m   Cloning\u001b[22m\u001b[39m git-repo `https://github.com/laguer/MathPhysicalConstants.jl`\n",
       "\u001b[2K\u001b[?25h\u001b[32m\u001b[1m  Updating\u001b[22m\u001b[39m git-repo `https://github.com/laguer/MathPhysicalConstants.jl`\n",
       "\u001b[2K\u001b[?25h\u001b[32m\u001b[1m Resolving\u001b[22m\u001b[39m package versions...\n",
       "\u001b[32m\u001b[1m  Updating\u001b[22m\u001b[39m `/srv/julia/pkg/environments/v0.7/Project.toml`\n",
@@ -424,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1053,12 +1244,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Universe horizon radius calculus (method 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "$$R_{3mn}=\\frac{2.\\hbar^2}{G.m_e.m_p.m_n}$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1067,13 +1265,53 @@
        "1.3056254088279212e26"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "R3mn=(2*SI.PlanckConstantHbar^2)/(SI.SanchezGravitationalConstant*SI.MassElectron*SI.MassProton*SI.MassNeutron)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.3800754843601864e10"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1.3056254088279212e26/SI.LightYear"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.3800754843601864e10"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "R3mn/SI.LightYear"
    ]
   },
   {
