--- a/doc/MathPhysicalConstants.ipynb
+++ b/doc/MathPhysicalConstants.ipynb
@@ -940,7 +940,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Visible Universe horizon radius calculus (distance)\n",
+    "## Visible Universe horizon radius calculus -distance- (method 1)\n",
     "\n",
     "### $R$ $=$ $2a_{G}$ƛ$_{e}$"
    ]
@@ -1244,7 +1244,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Universe horizon radius calculus (method 2)"
+    "## Universe horizon radius calculus (method 2) in 3 minutes: $$R_{3mn}$$"
    ]
   },
   {
