--- a/doc/MathPhysicalConstants.ipynb
+++ b/doc/MathPhysicalConstants.ipynb
@@ -827,7 +827,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Calculate the visible Universe horizon radius"
+    "# How to calculate the visible Universe horizon radius"
    ]
   },
   {
@@ -891,7 +891,7 @@
     "## Let's first determine the gravitational coupling constant: \n",
     "\n",
     "One determines the Gravitational Coupling Constant: \n",
-    "### $a_{G}$ $=$ $\\hbar$$c$ $/$ $G$$m_{p}$$m_{H}$"
+    "### $$a_{G}=\\hbar.c/G.m_{p}.m_{H}$$"
    ]
   },
   {
