--- a/doc/MathPhysicalConstants.ipynb
+++ b/doc/MathPhysicalConstants.ipynb
@@ -891,7 +891,7 @@
     "## Let's first determine the gravitational coupling constant: \n",
     "\n",
     "One determines the Gravitational Coupling Constant: \n",
-    "### $$a_{G}=\frac{\hbar.c}{G.m_{p}.m_{H}}$$"
+    "### $$a_{G}=\\frac{\hbar.c}{G.m_{p}.m_{H}}$$"
    ]
   },
   {
