--- a/doc/MathPhysicalConstants.ipynb
+++ b/doc/MathPhysicalConstants.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
        "\"/srv/julia/pkg/conda/3\""
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,14 +94,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32m\u001b[1m Resolving\u001b[22m\u001b[39m package versions...\n",
+      "\u001b[32m\u001b[1m Resolving\u001b[22m\u001b[39m package versions...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "┌ Warning: julia version requirement for package PhysicalConstant not satisfied\n",
+      "└ @ Pkg.Operations /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v0.7/Pkg/src/Operations.jl:143\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\u001b[32m\u001b[1m Installed\u001b[22m\u001b[39m MacroTools ─ v0.4.5\n",
       "\u001b[32m\u001b[1m Installed\u001b[22m\u001b[39m PyCall ───── v1.91.2\n",
       "\u001b[32m\u001b[1m  Updating\u001b[22m\u001b[39m `/srv/julia/pkg/environments/v0.7/Project.toml`\n",
@@ -182,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -194,8 +208,9 @@
       " \u001b[90m [8f4d0f93]\u001b[39m\u001b[37m Conda v1.3.0\u001b[39m\n",
       " \u001b[90m [e30172f5]\u001b[39m\u001b[37m Documenter v0.22.6\u001b[39m\n",
       " \u001b[90m [7073ff75]\u001b[39m\u001b[37m IJulia v1.20.2\u001b[39m\n",
+      " \u001b[90m [b5851bab]\u001b[39m\u001b[37m MathPhysicalConstants v0.0.5+ [`/srv/julia/pkg/dev/MathPhysicalConstants`]\u001b[39m\n",
       " \u001b[90m [eff96d63]\u001b[39m\u001b[37m Measurements v1.0.2\u001b[39m\n",
-      " \u001b[90m [438e738f]\u001b[39m\u001b[37m PyCall v1.91.2\u001b[39m\n",
+      " \u001b[90m [988cf3cc]\u001b[39m\u001b[37m PhysicalConstant v0.0.3 [`/srv/julia/pkg/dev/PhysicalConstant`]\u001b[39m\n",
       " \u001b[90m [1fd47b50]\u001b[39m\u001b[37m QuadGK v2.3.1\u001b[39m\n",
       " \u001b[90m [3cdcf5f2]\u001b[39m\u001b[37m RecipesBase v0.5.0\u001b[39m\n",
       " \u001b[90m [ae029012]\u001b[39m\u001b[37m Requires v0.5.2\u001b[39m\n",
@@ -241,17 +256,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m\u001b[1m   Cloning\u001b[22m\u001b[39m git-repo `https://github.com/laguer/MathPhysicalConstants.jl`\n",
-      "\u001b[?25l    "
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -264,6 +271,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\u001b[32m\u001b[1m   Cloning\u001b[22m\u001b[39m git-repo `https://github.com/laguer/MathPhysicalConstants.jl`\n",
       "\u001b[2K\u001b[?25h\u001b[32m\u001b[1m  Updating\u001b[22m\u001b[39m git-repo `https://github.com/laguer/MathPhysicalConstants.jl`\n",
       "\u001b[2K\u001b[?25h\u001b[32m\u001b[1m Resolving\u001b[22m\u001b[39m package versions...\n",
       "\u001b[32m\u001b[1m  Updating\u001b[22m\u001b[39m `/srv/julia/pkg/environments/v0.7/Project.toml`\n",
@@ -377,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -658,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -667,19 +675,19 @@
        "1.32613243113089e-69"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# $a_{G}$ = $\\hbar$$c$/$G$$m_{p}$$m_{H}$\n",
+    "# $a_{G'}$ = $\\hbar$$c$/$G'$$m_{p}$$m_{H}$\n",
     "SI.PlanckConstantHbar*SI.c/SI.GravitationalConstant*SI.MassProton*SI.MassHydrogen"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -688,7 +696,7 @@
        "1.3258595111686009e-69"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -716,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -725,13 +733,13 @@
        "1.3068334634480155e26"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# R = 2a_{G'} \\lambdabar_{e}\n",
+    "# R1 = 2a_{G'} \\lambdabar_{e}\n",
     "R1 = 2*((SI.PlanckConstantHbar*SI.c)/(SI.GravitationalConstant*SI.MassProton*SI.MassHydrogen))*SI.ƛe"
    ]
   },
@@ -744,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -753,13 +761,13 @@
        "1.3065645152410416e26"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# R = 2a_{G} \\lambdabar_{e}\n",
+    "# R2 = 2a_{G} \\lambdabar_{e}\n",
     "R2 = 2*((SI.PlanckConstantHbar*SI.c)/(SI.SanchezGravitationalConstant*SI.MassProton*SI.MassHydrogen))*SI.ƛe"
    ]
   },
@@ -1139,12 +1147,174 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Nambu Universe Radius calculus in 3 minutes (method 3)\n",
+    "$$R_N=\\frac{2.\\hbar^2}{G.(m_N)^3}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With Nambu mass $$m_N=m_e.a$$ and $$a=1/\\alpha$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.7132461922203357e26"
+     ]
+    }
+   ],
+   "source": [
+    "R_N=2*SI.PlanckConstantHbar^2/(SI.GravitationalConstant*((SI.SanchezElectrConstant)*SI.MassElectron)^3)\n",
+    "print(R_N)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18.109398396890033"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "R_N/(SI.LightYear*10^9)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Eddington Universe Radius calculus in 3 minutes (method 3)\n",
+    "$$R_{Edd}=\\frac{2.\\hbar^2}{G.m_e.m_p^2}$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.3076942324251935e26"
+     ]
+    }
+   ],
+   "source": [
+    "R_Edd=2*SI.PlanckConstantHbar^2/(SI.GravitationalConstant*SI.MassElectron*SI.MassProton^2)\n",
+    "print(R_Edd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13.822622775313032"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "R_Edd/(SI.GigaLightYear)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Francis M. Sanchez Universe Radius calculus in 3 minutes (method 4)\n",
+    "$$R_{Francis.M.Sanchez}=ƛ_e.g(6)$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With $$g(k)=exp(2^{k+1/2})/k$$ when $$k=6$$\n",
+    "And $$ƛ_e=\\frac{\\hbar}{m_e.c}$$ as the reduced Compton electron wavelength radius"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.3075686776359582e26"
+     ]
+    }
+   ],
+   "source": [
+    "using PyCall\n",
+    "@pyimport numpy\n",
+    "R_FMS=(SI.PlanckConstantHbar/(SI.MassElectron*SI.c))*numpy.exp(2^(6+(1/2)))/6\n",
+    "print(R_FMS)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13.821295632892273"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "R_FMS/(SI.GigaLightYear)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Other MathPhysicalConstants Examples"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1153,7 +1323,7 @@
        "2.4263102367e-12"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1544,17 +1714,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8.724905575508271e292"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Happy family Product as seen in https://en.wikipedia.org/wiki/Sporadic_group\n",
+    "SI.HFP"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Inf"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 26 Sporadic Group https://en.wikipedia.org/wiki/Sporadic_group\n",
+    "SI.TSSGP"
+   ]
   },
   {
    "cell_type": "markdown",
